# rust-todo-be

./: Cargo.toml  Dockerfile  README.md
migrations/: create_tables.sql
src/: db.rs  domain.rs  framework.rs  interface_adapter.rs  lib.rs  main.rs  usecase.rs
src/db/: init_todo_db.rs  init_user_db.rs  ram_zatsu_todo_db.rs  ram_zatsu_user_db.rs
src/domain/: todo.rs  user.rs  users.rs
src/framework/: api_server.rs
src/interface_adapter/: controller.rs  todo_viewmodel.rs  user_viewmodel.rs  web_todo_controller.rs  web_user_controller.rs
src/interface_adapter/controller/: web_todo.rs  web_user.rs
src/interface_adapter/presenter/: todo.rs  user.rs
src/interface_adapter/viewmodel/: todo.rs  user.rs
src/presenter/: todo.rs  user.rs
src/usecase/: data_access.rs  interactor.rs
src/usecase/data_access/: todo.rs  user.rs  users.rs
src/usecase/input-boundary/: todo.rs  users.rs
src/usecase/input_boundary/: todo.rs  user.rs
src/usecase/interactor/: todo.rs  user.rs  users.rs
src/usecase/output_data/: user.rs
