[package]
name = "rust-todo-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
actix-web = "4"
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
